add product item backend - done